--- a/TODOThing/src/views/Spotify/Spotify.css
+++ b/TODOThing/src/views/Spotify/Spotify.css
@@ -19,8 +19,8 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-content:start;
-    padding: 15px;
+    align-content: flex-start;
+    padding-top: 15px;
     justify-content: center;
     transition: background-image 1s;
 }
