--- a/TODOThing/src/index.css
+++ b/TODOThing/src/index.css
@@ -87,6 +87,16 @@ code {
      --text-announcement: #3d91f4;
 }
 
+h1 {
+  display: block;
+  font-size: 2em;
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  unicode-bidi: isolate;
+}
 p, h1, h2, h3, h4, h5 {
   padding: 0px;
   margin: 0px;
