--- a/TODOThing/src/views/default/default.css
+++ b/TODOThing/src/views/default/default.css
@@ -1,5 +1,6 @@
 .view_default {
     height: 100vh;
     display: flex;
-    align-content: center;
+    align-items: center;
+    justify-content: center;
 }
