Trello Label Display

--- a/TODOThing/src/views/Trello/Trello.css
+++ b/TODOThing/src/views/Trello/Trello.css
@@ -156,7 +156,7 @@ button {
     color: white;
 }
 
-.card_container {
+.cards_container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -165,7 +165,9 @@ button {
 }
 
 .card_item {
+    display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 20px;
     margin-bottom: 15px;
     width: 90vw;
@@ -174,4 +176,73 @@ button {
     border-radius: 12px;
     background-color: var(--bg-elevated-highlight);
     color: white;
+}
+.card_details {
+    display: flex;
+    flex-direction: column;
+}
+.card_labels {
+    display: flex;
+    height: 120px;
+    overflow:scroll;
+    flex-direction:column;
+}
+.card_labels::-webkit-scrollbar {
+    width: 0; /* Remove scrollbar width */
+    height: 0;
+    background: transparent; /* Optional: hide scrollbar gutter */
+  }
+
+.card_label {
+    padding: 4px 8px; /* Adjust padding as needed */
+    height: fit-content;
+    width: 150px;
+    margin-bottom: 5px;
+    border-radius: 4px; /* Optional: for rounded corners */
+    color: #fff; /* Assuming labels have a dark background */
+    font-size: 22px; /* Adjust font size as needed */
+
+    --trello-color-red: #eb5a46;
+    --trello-color-red_light: #ff8b85;  
+    --trello-color-red_dark: #b04632;   
+    
+    --trello-color-orange: #ff9f1a;
+    --trello-color-orange_light: #ffb983;
+    --trello-color-orange_dark: #d97d0d; 
+    
+    --trello-color-yellow: #f2d600;
+    --trello-color-yellow_light: #f6f792;
+    --trello-color-yellow_dark: #d9b200; 
+    
+    --trello-color-green: #61bd4f;
+    --trello-color-green_light: #86e891; 
+    --trello-color-green_dark: #3b8735;  
+    
+    --trello-color-lime: #7bc86c;
+    --trello-color-lime_light: #bef2c9;  
+    --trello-color-lime_dark: #4a9442;   
+    
+    --trello-color-blue: #0079bf;
+    --trello-color-blue_light: #73c3ed;  
+    --trello-color-blue_dark: #055a8c;   
+    
+    --trello-color-sky: #00c2e0;
+    --trello-color-sky_light: #a2ecf5;   
+    --trello-color-sky_dark: #0086a8;    
+    
+    --trello-color-purple: #c377e0;
+    --trello-color-purple_light: #e0b3f7;
+    --trello-color-purple_dark: #9466b9; 
+    
+    --trello-color-pink: #ffabb0;
+    --trello-color-pink_light: #ffc4c8;  
+    --trello-color-pink_dark: #d47b84;   
+    
+    --trello-color-brown: #b38f00;
+    --trello-color-brown_light: #d1b367; 
+    --trello-color-brown_dark: #846200;  
+    
+    --trello-color-gray: #838c91;
+    --trello-color-gray_light: #cfd4d7;  
+    --trello-color-gray_dark: #5c5e60;   
 }
