--- a/DeskThing/src/views/Spotify/Spotify.css
+++ b/DeskThing/src/views/Spotify/Spotify.css
@@ -1,32 +1,50 @@
 .view_spotify {
     width: 100vw;
-    height: 100vh;
+    height: 85vh;
     overflow: hidden;
     display: flex;
 }
 .view_spotify_img_container {
-    min-width: 85vh;
+    min-height: 75vh;
+    min-width: 65vh;
+    padding: 35px;
+    display: flex;
+    align-items: center;
     background-color: var(--bg-press);
+
 }
 .view_spotify img {
     max-height: 85vh;
     max-width: 85vh;
-    width: 85vh;
+    width: 300px;
+    height: 300px;
+    overflow: hidden;
+    border-radius: 50px 4px;
 }
 
 .view_spotify_info {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
+    padding-right: 100px;
     flex-direction: column;
-    align-content: flex-start;
-    padding-top: 15px;
-    justify-content: center;
-    transition: background-image 1s;
+    text-align: start;
+    padding-top: 13vh;
+    overflow: hidden;
+}
+.view_spotify_device {
+    position: absolute;
+    bottom: 120px;
+    font-weight: 500;
 }
 
-.view_spotify_title, .view_spotify_artist {
-    padding: 0px;
-    margin: 0px;
-    text-align: start;
+.view_spotify_title, .view_spotify_artist, .view_spotify_album {
+    padding: 0px 0px;
+    margin: 5px;
+}
+.view_spotify_title {
+    font-size: 40px;
+}
+.spotify_fade {
+    transition: all 0.7s ease-out;
 }
