--- a/DeskThing/src/components/Footer/Footer.css
+++ b/DeskThing/src/components/Footer/Footer.css
@@ -1,14 +1,26 @@
-.audioPlayer {
+.audioPlayer_container {
     padding-top: 3px;
     position:fixed;
     bottom:0px;
     width: 100vw;
+    height: 80px;
+    display:flex;
+    transition: height 0.3s, background-color 0.2s ease-out;
+    background: conic-gradient(from 0turn at 10% -5%,var(--bg-tinted-highlight) 26%, var(--color-albumColor) 50%);
+    background-color: var(--bg-highlight);
+    
+    color: white;
+  }
+.audioPlayer {
+    bottom:0px;
+    width: 100vw;
     height: 160px;
     display:flex;
-    transition: transform 0.3s ease-out, background-color 0.2s ease-out;
-    transform: translate(0px, 80px);
-    background-color: var(--bg-highlight);
-    color: white;
+  }
+
+  .audioPlayer_container.visible {
+    height: 160px;
+    background-color: var(--bg-press);
   }
   .audioPlayer_controls {
     width: 100%;
@@ -48,25 +60,21 @@
     fill: var(--text-subdued);
   }
   .getSongInfo {
-    height: 80px;
-    max-width: 160px;
-    min-width: 160px;
-    transition: height 0.3s ease-out;
+    height: 100%;
+    max-width: 163px;
+    min-width: 163px;
     display: flex;
+    padding: 0px;
+    margin: 0px;
+    margin-top: -3px;
   }
-  .getSongInfo.lg {
-    height: 150px;
-  }
+  
   .getSongInfo .albumArt {
     height: 100%;
     overflow: hidden;
     border-radius: 0px 15px 15px 0px;
   }
 
-  .audioPlayer.visible {
-    transform: translate(0px, 0px);
-    background-color: var(--bg-press);
-  }
   
   .Log {
     background-color: rgba(1, 1, 1, 1);
