--- a/DeskThingServer/src/renderer/src/assets/base.css
+++ b/DeskThingServer/src/renderer/src/assets/base.css
@@ -9,10 +9,25 @@
   font-style: normal;
 }
 
-body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-  'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+@layer base {
+  @font-face {
+    font-family: 'Geist';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url('./fonts/GeistVF.ttf') format('truetype');
+  }
 }
+@layer base {
+  @font-face {
+    font-family: 'GeistMono';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url('./fonts/GeistMonoVF.ttf') format('truetype');
+  }
+}
+
 .logo {
   font-family: 'TheBoldFont', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
   'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
