Settings + Minor fixes

--- a/DeskThing/src/views/local/styles.css
+++ b/DeskThing/src/views/local/styles.css
@@ -4,6 +4,6 @@
 }
 
 .text_color {
-    background: linear-gradient(to right, var(--color-albumColor), var(--bg-tinted-highlight));
+    background: linear-gradient(to right, var(--color-albumColor) 15%, var(--bg-tinted-highlight) 130%);
     color: var(--color-albumText);
 }
